update contents and fix some stuffs

--- a/about/index.html
+++ b/about/index.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alkahfi - About</title>
+    <title>Alkahfi | About</title>
     <link rel="stylesheet" href="/all.css?v=210624" />
     <link rel="icon" type="image/x-icon" href="/assets/favicon-straw.ico" />
     <meta name="robots" content="noindex,nofollow" />
   </head>
 
   <body>
-    <nav class="_mb-3">
+    <nav class="menu-links">
       <a href="/">Home</a>
-      <br />
     </nav>
     <div class="container">
       <hr style="border-style: dashed" />
@@ -26,9 +25,9 @@
             Being a nomad isn't easy, but it's what life has given me. I spent
             most of my childhood in Balikpapan, Borneo island. It was a lively
             place with beautiful forests and beaches 🏖️. Now, I live in South
-            Tangerang. Life here is
-            more urban and fast-paced. Moving around has been challenging, but
-            each place has given me unique memories and experiences.
+            Tangerang. Life here is more urban and fast-paced. Moving around has
+            been challenging, but each place has given me unique memories and
+            experiences.
           </p>
           <figure>
             <img
@@ -40,6 +39,7 @@
             />
           </figure>
           <p>You can call me Alkahfi, Kahfi or Alfi.</p>
+        </article>
         <article>
           <h2>IT Enthusiast</h2>
           <figure>
@@ -55,52 +55,61 @@
           </figure>
           <p>
             I really enjoy playing with laptops; this simple reason led me to
-            believe that computer science is the only suitable study for me.
-            During my studies, I gained a lot of programming fundamentals, but
-            not so much in-depth technical practice. I was not paying attention
-            enough, though. Programming is like an ocean; you never know
-            how large it is and where it ends.
+            believe that computer science was the only suitable field of study
+            for me. During college, I learned a lot of programming fundamentals,
+            but not much in-depth technical practice — I wasn’t paying enough
+            attention, though. Programming is like an ocean; you never know how
+            vast it is or where it ends.
           </p>
           <p>
-            On college, I learned programming concepts, languages, database, problem solving, tools, software documents and yeah creating an app.
+            In college, I studied programming concepts, languages, databases,
+            problem-solving, tools, software documentation — and, of course,
+            building apps.
           </p>
           <h3>Working as a Programmer</h3>
           <p>
-            In terms of work, roles or professions (as a programmer) are usually
-            more specific. I have worked as a
-            <strong>Frontend Developer</strong>, a role responsible for
-            developing software on the user interface side — the part you see
-            and interact with, for example, the input box for typing Instagram
-            caption. A contrasting role is Backend Developer, which focuses on
-            developing server application to support frontend application, such
-            as supplying or storing data. Here is another example: if your
-            friend likes your instagram post, that like and your friend username
-            must be saved so when you open your instagram, your post has friend's like.
+            In terms of work, programming roles or professions are usually quite
+            specific. I've worked as a <strong>Frontend Developer</strong>, a
+            role responsible for developing software on the user interface side
+            — the part you see and interact with, such as the input box where
+            you type an Instagram caption. A contrasting role is the Backend
+            Developer, which focuses on developing the server-side application
+            that supports the frontend, such as supplying or storing data.
           </p>
           <p>
-            For the jack-of-all-trades role, many call it a Fullstack Developer
-            or a Software Developer. These roles require both of Frontend
-            and Backend skills, superb isn't it?
+            Here's another example: if your friend likes your Instagram post,
+            that “like” and your friend's username must be saved so that when
+            you open Instagram, your post shows your friend's like.
           </p>
           <p>
-            There are three common types of software: web, mobile, and desktop based
-            application.<br />I guess you have used them before. Their notable difference lies in where the
-            software is installed. As a Frontend Developer, we often
-            work on web-based software—applications that run in a web browser
-            (Google Chrome, Firefox...). These can be website or web application.
-            My homepage that you are visiting right now is a website, or I like
-            to call it a webpage because it contains some pages and no other
-            functionality. Importantly, this doesn't exclude the possibility of
-            creating applications that can run on multiple platforms, especially
-            when there isn't a dedicated developer available for a specific
-            platform, e.g. mobile developer or application developer.
+            For the jack-of-all-trades type of role, many call it a Fullstack
+            Developer or Software Developer. These roles require both frontend
+            and backend skills — pretty cool, isn't it?
           </p>
           <p>
-            Programmer, Developer, and Engineer are similar <em>roles</em>, the
-            latter requires you to plan and design the software, it is comprehensive. <br />On the other hand; Programming, Development, and
-            Engineering are the <em>activity</em>. These terms
-            or jargons may not be 100% agreed upon by everyone, but I hope you
-            get the point. What really matters is their problem solving skill to help human problems with the use of Information Technology.
+            There are three common types of software: web, mobile, and
+            desktop-based applications. I guess you've used them before. Their
+            main difference lies in where the software is installed. As a
+            frontend developer, we often work on web-based software —
+            applications that run in a web browser (Google Chrome, Firefox, and
+            so on). These can be websites or web applications.
+          </p>
+          <p>
+            My homepage, the one you're visiting right now, is a website — or
+            rather, a webpage, since it contains a few pages and doesn't have
+            additional functionality. Of course, that doesn't exclude the
+            possibility of building applications that can run across multiple
+            platforms, especially when there isn't a dedicated developer for a
+            specific platform, such as mobile or desktop.
+          </p>
+          <p>
+            Programmer, Developer, and Engineer are similar roles, though the
+            last one often involves more planning and software design — a more
+            comprehensive scope. On the other hand, Programming, Development,
+            and Engineering refer to the activities themselves. These terms or
+            jargons might not be universally agreed upon, but I hope you get the
+            idea. What really matters is their problem-solving ability — helping
+            humans solve problems through Information Technology.
           </p>
         </article>
       </main>
