--- a/works/index.html
+++ b/works/index.html
@@ -3,21 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alkahfi - About</title>
+    <title>Alkahfi | Works</title>
     <link rel="stylesheet" href="/all.css?v=210624" />
     <link rel="icon" type="image/x-icon" href="/assets/favicon-straw.ico" />
     <meta name="robots" content="noindex,nofollow" />
   </head>
 
   <body>
-    <nav class="_mb-3">
+    <nav class="menu-links">
       <a href="/">Home</a>
-      <br />
     </nav>
     <div class="container">
       <hr style="border-style: dashed" />
       <header>
-        <h1>Works I did in the past</h1>
+        <h1>Lessons Learned from Past Work.</h1>
       </header>
       <main>
         <nav>
